[workspace]

resolver = "3"
members = ["crates/*"]

[workspace.dependencies]
ravm_args = { path = "crates/ravm_args" }
ra_file = { path = "crates/ra_file" }
ravm_reader = { path = "crates/ravm_reader" }
ra_version = { path = "crates/ra_version" }
rac_args = { path = "crates/rac_args" }
rac_writer = { path = "crates/rac_writer" }

anyhow = "1.0.102"
bincode = "1.3.0"
clap = "4.6.0"
serde = "1.0.228"
rustyline = "18.0.0"
rac_reader = { path = "crates/rac_reader" }
ravm_runner = { path = "crates/ravm_runner" }
regex = "1.12.3"
unescape = "0.1.0"
